fixing image and text align on landing page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,10 @@
 
 body{
   background-color: #f4e4c2;
+  padding:0;
+   margin:0; 
+   height:100%;
+  
 }
 .App-logo {
   height: 40vmin;
