--- a/client/src/components/landing-page/landing.css
+++ b/client/src/components/landing-page/landing.css
@@ -1,13 +1,23 @@
-#dog-container{
+#dog-container {
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: flex-end;
-    align-items: baseline;
-    align-self: baseline;
-    padding-top: 100px;
+   
+    justify-content: space-around;
+align-items: center;
+   
+   width: auto;
 }
 
 #dog-container img {
-    align-self: baseline;
-    bottom: 0
+    margin-left: 50px;
+}
+.text-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+}
+
+.text{
+  
+   margin:20px 20px;
 }
