--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -11,7 +11,7 @@
     width: auto;
     justify-content: flex-start;
     align-items: center;
-    font-size: 15px;
+    font-size: 16px;
    
 }
 
@@ -23,5 +23,5 @@
 }
 
 li{
-    padding:15px;
+    padding:10px;
 }
